add: stock chapter page

--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -13,3 +13,4 @@
 @import '../sections/service-center';
 @import '../sections/not-found';
 @import '../sections/stock';
+@import '../sections/stock-chapter';
