--- a/src/components/_stock.html
+++ b/src/components/_stock.html
@@ -1,4 +1,4 @@
-<section class="stock">
+<section data-modal="#requestSendModal" class="stock">
     <div class="stock__container container">
         <nav class="stock__breadcrumbs breadcrumbs">
             <a href="#" class="breadcrumbs__link">Главная</a>
