--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -14,3 +14,4 @@
 @import '../sections/not-found';
 @import '../sections/stock';
 @import '../sections/stock-chapter';
+@import '../sections/contacts';
