--- a/src/scss/sections/_contacts-map.scss
+++ b/src/scss/sections/_contacts-map.scss
@@ -30,27 +30,85 @@
         @media (min-width: 48em) {
             min-height: 100%;
             flex: 0 0 57.6rem;
+
+            .place-title {
+                color: $white;
+
+                background-color: $blue;
+
+                transition:
+                    background-color 0.3s ease,
+                    color 0.3s ease,
+                    margin 0.3s ease,
+                    padding 0.3s ease,
+                    border-bottom 0.3s ease;
+
+                svg {
+                    path {
+                        fill: $white;
+                    }
+                }
+            }
+
+            ._is-active .place-title {
+                margin: 0 2.4rem;
+                padding: 3.2rem 0;
+
+                width: calc(100% - 4.8rem);
+
+                color: $black;
+
+                background-color: transparent;
+
+                border-bottom: 1px solid #99b5cc;
+
+                svg {
+                    opacity: 0;
+                    visibility: hidden;
+                }
+            }
         }
     }
 
     &__map {
         height: 59.9rem;
         width: 100%;
-        .ymaps3x0--marker {
-            width: 16.1rem;
-        }
-
-        [class*='-main-engine-container'] {
-            filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
-            -webkit-filter: grayscale(100%);
-        }
 
         @media (max-width: 48em) {
             height: 62.6rem;
+        }
+    }
+}
 
-            .ymaps3x0--marker {
-                width: 18rem;
-            }
+.map {
+    .ymaps3x0--marker {
+        width: 16.1rem;
+    }
+
+    [class*='-main-engine-container'] {
+        filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+        -webkit-filter: grayscale(100%);
+    }
+
+    @media (max-width: 48em) {
+        .ymaps3x0--marker {
+            width: 18rem;
+        }
+    }
+}
+
+.marker {
+    cursor: pointer;
+
+    rect,
+    path#path-rect {
+        transition: fill 0.3s ease;
+    }
+
+    &._is-active {
+        rect,
+        path#path-rect {
+            fill: $blue;
         }
     }
 }
@@ -84,58 +142,23 @@
 
     &:first-child {
         margin-bottom: auto;
-        padding: 4.4rem 2.8rem;
-
-        .item-contacts-map__heading {
-            padding-bottom: 3.6rem;
-            border-bottom: 1px solid #91aec6;
-        }
-
-        @media (max-width: 48em) {
-            margin-bottom: 6rem;
-            padding: 3.2rem 3.2rem 0 3.2rem;
-
-            .item-contacts-map__heading {
-                padding-bottom: 3.2rem;
-            }
-        }
-    }
-
-    &:last-child {
-        padding: 3.2rem 2.8rem;
-        background-color: $blue;
-        color: $white;
-
-        .item-contacts-map__heading {
-            &::after {
-                content: '';
-                margin-left: auto;
-                flex: 0 0 2.4rem;
-                width: 2.4rem;
-                height: 2.4rem;
-                background: url('./assets/images/icons/sm-arr-white.svg') center / contain no-repeat;
-            }
-        }
-
-        @media (max-width: 48em) {
-            padding: 3.2rem 2.4rem;
-            .item-contacts-map__heading {
-                &::after {
-                    flex: 0 0 3.2rem;
-                    width: 3.2rem;
-                    height: 3.2rem;
-                }
-            }
-        }
     }
 
     &__list {
+        padding: 0 1.6rem;
     }
 
     &__list-item {
         display: block;
         &:not(:last-child) {
             margin-bottom: 1.6rem;
+        }
+        &:last-child {
+            margin-bottom: 3rem;
+
+            @media (max-width: 48em) {
+                margin-bottom: 6rem;
+            }
         }
     }
 
