add: news & privacy policy pages

--- a/src/scss/dev/vzmsk1.scss
+++ b/src/scss/dev/vzmsk1.scss
@@ -15,3 +15,6 @@
 @import '../sections/stock';
 @import '../sections/stock-chapter';
 @import '../sections/contacts';
+@import '../sections/service-center-hero';
+@import '../sections/news';
+@import '../sections/privacy-policy';
