--- a/src/components/_not-found.html
+++ b/src/components/_not-found.html
@@ -1,4 +1,4 @@
-<section class="not-found">
+<section data-modal="#requestSendModal" class="not-found">
     <div class="not-found__container container">
         <div class="not-found__body">
             <span class="not-found__heading">404</span>
