--- a/src/components/_privacy-policy.html
+++ b/src/components/_privacy-policy.html
@@ -5,7 +5,7 @@
         </div>
         <div class="privacy-policy__body">
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >1. Общие положения и основные термины</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >2. Основные понятия, используемые в Политике</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >3. Основные права и обязанности Оператора</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >4. Основные права и обязанности субъектов персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -214,7 +214,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >5. Оператор может обрабатывать следующие персональные данные Пользователя</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -275,7 +275,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >6. Принципы обработки персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -318,7 +318,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >7. Цели обработки персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -347,7 +347,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >8. Правовые основания обработки персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -392,7 +392,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >9. Условия обработки персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >10. Порядок сбора, хранения, передачи и других видов обработки персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -499,7 +499,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >11. Перечень действий, производимых Оператором с полученными персональными данными</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -518,7 +518,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >12. Трансграничная передача персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -539,7 +539,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue"
+                <span class="privacy-policy__subtitle h h_h3 h_blue"
                     >13. Конфиденциальность персональных данных</span
                 >
                 <div class="privacy-policy__text-wrap">
@@ -551,7 +551,7 @@
                 </div>
             </div>
             <div class="privacy-policy__group">
-                <span class="privacy-policy__heading h h_h3 h_blue">14. Заключительные положения</span>
+                <span class="privacy-policy__subtitle h h_h3 h_blue">14. Заключительные положения</span>
                 <div class="privacy-policy__text-wrap">
                     <p class="privacy-policy__text">
                         14.1. Пользователь может получить любые разъяснения по интересующим вопросам,
