--- a/src/components/_question-form.html
+++ b/src/components/_question-form.html
@@ -11,7 +11,7 @@
                             autocomplete="off"
                             type="text"
                             name="form[]"
-                            placeholder="Ваше имя"
+                            placeholder="Ваше имя*"
                             class="input__field"
                         />
                     </div>
@@ -23,7 +23,7 @@
                             autocomplete="off"
                             type="tel"
                             name="form[]"
-                            placeholder="Номер телефона"
+                            placeholder="Номер телефона*"
                             class="input__field"
                         />
                     </div>
