--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -7,6 +7,7 @@
             <nav class="hf-grid__nav">
                 <a href="#" class="hf-grid__nav-link">Каталог</a>
                 <a href="#" class="hf-grid__nav-link">Акции</a>
+                <a href="#" class="hf-grid__nav-link">Новости</a>
                 <a href="#" class="hf-grid__nav-link">Конфигуратор</a>
                 <a href="#" class="hf-grid__nav-link">Документация</a>
                 <a href="#" class="hf-grid__nav-link">Сервисный центр</a>
