--- a/src/scss/sections/_documentation.scss
+++ b/src/scss/sections/_documentation.scss
@@ -5,6 +5,9 @@
     }
 
     &__head {
+        .section-head__heading {
+            text-transform: uppercase;
+        }
     }
 
     &__breadcrumbs {
@@ -22,7 +25,7 @@
         width: 100%;
 
         @media (min-width: 48em) {
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 1.5rem;
         }
     }
