--- a/src/scss/sections/_catalog.scss
+++ b/src/scss/sections/_catalog.scss
@@ -19,7 +19,6 @@
     &__heading-group {
         display: flex;
         flex-direction: column;
-        row-gap: 1.6rem;
 
         @media (min-width: 48em) {
             flex-direction: row;
@@ -33,7 +32,12 @@
         align-items: center;
         column-gap: 1rem;
 
+        font-weight: 600;
+        text-transform: none;
+
         @media (min-width: 48em) {
+            text-transform: uppercase;
+
             span {
                 display: none;
             }
@@ -101,6 +105,8 @@
     overflow: hidden;
     background-color: $gray;
 
+    user-select: none;
+
     &_vertical {
         &.catalog-item-card {
             &::before {
@@ -138,7 +144,7 @@
                 padding: 1.4rem 2.8rem;
                 flex: 1 1 auto;
                 background-color: $white;
-                clip-path: polygon(0 0, 94% 0, 100% 19%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0% 20%);
+                clip-path: polygon(0 0, 95% 0, 100% 15%, 100% 70%, 100% 100%, 0 100%, 0% 70%, 0% 30%);
 
                 @media (max-width: 48em) {
                     padding: 2.4rem;
@@ -228,6 +234,13 @@
         }
     }
 
+    &__link-txt {
+        @media (max-width: 48em) {
+            font-size: 3.6rem;
+            font-weight: 600;
+        }
+    }
+
     &__inner {
         position: relative;
         z-index: 2;
@@ -262,6 +275,10 @@
                 width: 5.6rem;
                 height: 1px;
             }
+        }
+
+        @media (max-width: 48em) {
+            font-size: 5.6rem;
         }
     }
 
