--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     @media (max-width: 48em) {
-        margin-bottom: 5rem;
+        margin-bottom: 0;
     }
 
     &__container {
@@ -199,6 +199,10 @@
     color: $white;
     clip-path: polygon(4% 0, 100% 0, 100% 20%, 100% 80%, 100% 100%, 0 100%, 0% 80%, 0 25%);
 
+    @media (max-width: 48em) {
+        clip-path: polygon(9% 0, 100% 0, 100% 30%, 100% 70%, 100% 100%, 0 100%, 0% 70%, 0 17%);
+    }
+
     &::before,
     &::after {
         content: '';
@@ -214,7 +218,7 @@
         background: url('./assets/images/bg-figures/el-1.svg') center / contain no-repeat;
 
         @media (max-width: 48em) {
-            top: 15.2rem;
+            top: 12.2rem;
             left: 14.4rem;
             width: 36rem;
             height: 36rem;
@@ -229,7 +233,7 @@
         background: url('./assets/images/bg-figures/el-2.svg') bottom / contain no-repeat;
 
         @media (max-width: 48em) {
-            top: -18.4rem;
+            top: -23.4rem;
             width: 35.8rem;
             height: 35.8rem;
         }
