--- a/src/scss/sections/_stock.scss
+++ b/src/scss/sections/_stock.scss
@@ -26,6 +26,7 @@
         column-gap: 1rem;
 
         color: $blue;
+        text-transform: uppercase;
 
         &::after {
             content: attr(data-quantity);
