--- a/src/ui/_select.scss
+++ b/src/ui/_select.scss
@@ -61,6 +61,9 @@
         &._has-label {
             &::before {
                 content: attr(data-sel-label);
+
+                color: #4d5f6e;
+
                 transition: color 0.3s ease;
 
                 ._is-filled & {
