--- a/src/scss/sections/_about-us.scss
+++ b/src/scss/sections/_about-us.scss
@@ -98,7 +98,7 @@
     &__numbers {
         padding-top: 4rem;
 
-        border-top: 1px solid #004780;
+        border-top: 1px solid #99b5cc;
 
         @media (min-width: 48em) {
             padding-top: 5.2rem;
