--- a/src/scss/sections/_contacts-map.scss
+++ b/src/scss/sections/_contacts-map.scss
@@ -36,6 +36,7 @@
         @media (min-width: 48em) {
             min-height: 100%;
             flex: 0 0 57.6rem;
+            row-gap: 0.5rem;
 
             .place-title {
                 color: $white;
@@ -125,8 +126,15 @@
     flex-direction: column;
     row-gap: 3.6rem;
 
+    transition: flex 0.3s ease 0.3s;
+
     @media (max-width: 48em) {
         row-gap: 3.2rem;
+    }
+    @media (min-width: 48em) {
+        &._is-active {
+            flex: 1 1 auto;
+        }
     }
 
     &__heading {
@@ -145,10 +153,6 @@
                 align-self: flex-end;
             }
         }
-    }
-
-    &:first-child {
-        margin-bottom: auto;
     }
 
     &__list {
