--- a/src/components/modals.html
+++ b/src/components/modals.html
@@ -121,7 +121,11 @@
 </div>
 
 <!-- оставить заявку (сервисный центр) -->
-<div id="requestServiceCenterModal" aria-hidden="true" class="modal modal_request">
+<div
+    id="requestServiceCenterModal"
+    aria-hidden="true"
+    class="modal modal_request modal_request_service-center"
+>
     <div class="modal__wrapper">
         <div class="modal__content">
             <div class="modal__body">
