--- a/src/scss/sections/_product.scss
+++ b/src/scss/sections/_product.scss
@@ -92,6 +92,12 @@
             margin-bottom: 6.4rem;
 
             font-size: 3.6rem;
+
+            .modal_product-selection & {
+                max-width: 62rem;
+
+                font-size: 2.8rem;
+            }
         }
     }
     &__characteristics {
