--- a/src/ui/modals.scss
+++ b/src/ui/modals.scss
@@ -135,6 +135,10 @@ body::after {
                 width: 4.8rem;
                 height: 4.8rem;
             }
+
+            .modal_product-selection & {
+                top: 6rem;
+            }
         }
     }
 
@@ -238,8 +242,16 @@ body::after {
 
         color: $blue;
 
+        .modal_request & {
+            margin-bottom: 4rem;
+        }
+
         @media (max-width: 48em) {
             margin-bottom: 4.8rem;
+
+            .modal_request_service-center & {
+                margin-bottom: 1.6rem;
+            }
         }
     }
 
@@ -263,7 +275,7 @@ body::after {
 
     &__fields {
         display: grid;
-        row-gap: 5.6rem;
+        row-gap: 4rem;
 
         width: 100%;
 
