--- a/src/components/_documentation.html
+++ b/src/components/_documentation.html
@@ -34,8 +34,8 @@
         <div class="documentation__body">
             <div class="documentation__swiper swiper">
                 <ul class="documentation__swiper-wrapper swiper-wrapper">
-                    <li class="documentation__swiper-slide swiper-slide">
-                        <a href="#" class="documentation__card documentation-card">
+                    <li data-modal="#docsModal" class="documentation__swiper-slide swiper-slide">
+                        <div class="documentation__card documentation-card">
                             <span class="documentation-card__icon">
                                 <svg
                                     width="80"
@@ -63,10 +63,10 @@
                                     <span class="btn__txt">Подробнее</span>
                                 </button>
                             </span>
-                        </a>
+                        </div>
                     </li>
-                    <li class="documentation__swiper-slide swiper-slide">
-                        <a href="#" class="documentation__card documentation-card">
+                    <li data-modal="#docsModal" class="documentation__swiper-slide swiper-slide">
+                        <div class="documentation__card documentation-card">
                             <span class="documentation-card__icon">
                                 <svg
                                     width="80"
@@ -99,10 +99,10 @@
                                     <span class="btn__txt">Подробнее</span>
                                 </button>
                             </span>
-                        </a>
+                        </div>
                     </li>
-                    <li class="documentation__swiper-slide swiper-slide">
-                        <a href="#" class="documentation__card documentation-card">
+                    <li data-modal="#docsModal" class="documentation__swiper-slide swiper-slide">
+                        <div class="documentation__card documentation-card">
                             <span class="documentation-card__icon">
                                 <svg
                                     width="80"
@@ -137,9 +137,9 @@
                                     <span class="btn__txt">Подробнее</span>
                                 </button>
                             </span>
-                        </a>
+                        </div>
                     </li>
-                    <li class="documentation__swiper-slide swiper-slide">
+                    <li data-modal="#docsModal" class="documentation__swiper-slide swiper-slide">
                         <a href="#" class="documentation__card documentation-card">
                             <span class="documentation-card__icon">
                                 <svg
