--- a/src/scss/sections/_documentation.scss
+++ b/src/scss/sections/_documentation.scss
@@ -18,6 +18,10 @@
         }
     }
 
+    &__card {
+        cursor: pointer;
+    }
+
     &__cards {
         display: grid;
         gap: 4.8rem;
