--- a/src/components/modals.html
+++ b/src/components/modals.html
@@ -135,7 +135,12 @@
                 <div class="modal__inner">
                     <span class="modal__heading h h_h1">Оставить заявку</span>
                     <span class="modal__subtitle txt24">Монтаж и эксплуатация</span>
-                    <form action="#" data-dev class="modal__form form-modal">
+                    <form
+                        action="#"
+                        data-dev
+                        data-modal-message="#requestSendModal"
+                        class="modal__form form-modal"
+                    >
                         <div class="form-modal__fields">
                             <div data-hint="Поле обязательно к заполению" class="form-modal__input input">
                                 <input
