--- a/src/components/_documentation.html
+++ b/src/components/_documentation.html
@@ -93,7 +93,8 @@
                             </span>
                             <span class="documentation-card__text">
                                 <span class="documentation-card__heading h h_h3"
-                                    >Cертификаты соответствия продукции</span
+                                    >Cертификаты соответствия продукции Cертификаты соответствия продукции
+                                    соответствия продукции</span
                                 >
                                 <button type="button" class="documentation-card__btn btn btn_secondary">
                                     <span class="btn__txt">Подробнее</span>
