--- a/src/scss/sections/_documentation.scss
+++ b/src/scss/sections/_documentation.scss
@@ -18,6 +18,12 @@
         }
     }
 
+    &__swiper-slide {
+        &.swiper-slide {
+            height: auto;
+        }
+    }
+
     &__card {
         cursor: pointer;
     }
@@ -40,6 +46,7 @@
     padding: 3.2rem;
     display: flex;
     flex-direction: column;
+    height: 100%;
     background-color: $gray;
     transition: background-color 0.3s ease;
     overflow: hidden;
@@ -107,10 +114,12 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        height: 100%;
     }
 
     &__heading {
         margin-bottom: 1.2rem;
+        flex: 1 1 auto;
         transition: color 0.3s ease;
 
         @media (max-width: 48em) {
