--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -134,7 +134,7 @@
     &__bg {
         position: absolute;
         top: 0;
-        left: -8rem;
+        left: 0;
         width: 100vw;
         height: 100%;
 
@@ -151,6 +151,10 @@
         @media (max-width: 48em) {
             left: -2.4rem;
             height: calc(100% + 34.4rem);
+        }
+
+        @media (min-width: 1760px) {
+            left: calc((100vw - 176rem) / -2);
         }
     }
 
