--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -9,15 +9,15 @@
         position: absolute;
         z-index: -1;
         top: 0;
-        left: 0;
+        left: calc((100vw - 176rem) / -2);
 
         width: 110vw;
         height: 100%;
 
         background-color: $blue;
 
-        @media (min-width: 1760px) {
-            left: calc((100vw - 176rem) / -2);
+        @media (max-width: 1760px) {
+            left: -8rem;
         }
     }
 
