--- a/src/scss/sections/_video.scss
+++ b/src/scss/sections/_video.scss
@@ -1,5 +1,3 @@
-
-
 .video {
     position: relative;
 
@@ -71,6 +69,8 @@
         @media (max-width: 48em) {
             bottom: 0;
             left: 2rem;
+
+            overflow: hidden;
 
             transform: translate(0, 50%);
         }
